--- a/src/components/HeroCarousel.css
+++ b/src/components/HeroCarousel.css
@@ -3,6 +3,7 @@
   width: 100%;
   max-width: 100%;
   height: 70vh;
+  height: 70dvh;
   min-height: 400px;
   margin-top: var(--navbar-height);
   overflow: hidden;
